# MarkdownReader

./: .gitignore  LICENSE  README.md  build_exe.bat  pyproject.toml  run_markdown_reader.bat  sample.md
.github/workflows/: tests.yml
src/markdown_reader/: __init__.py  app.py
tests/: test_app.py
