[project]
name = "markdown-reader"
version = "0.1.2"
description = "A simple, lightweight desktop Markdown reader and editor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-qt>=4.4,<5",
  "pyinstaller>=6.10,<7",
]

[project.scripts]
markdown-reader = "markdown_reader.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_reader"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
